tests/fixtures/invalid/pow_dict_int_int.py
# Cannot call pow() with Dict[str, int], Int, Int
x = pow({"a": 1}, 1, 1)
